[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "POPSRegression"
version = "0.2.8.1"
description = "Bayesian regression for low-noise data using POPS algorithm"
authors = [
    {name = "Thomas D Swinburne", email = "thomas.swinburne@cnrs.fr"},
    {name = "Danny Perez", email = "danny_perez@lanl.gov"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "scikit-learn==1.3.0",
    "scipy==1.11.2",
    "numpy==1.26.2",
]
[project.urls]
"Homepage" = "https://github.com/tomswinburne/POPS-Regression"
"Bug Tracker" = "https://github.com/tomswinburne/POPS-Regression/issues"
"Documentation" = "https://github.com/tomswinburne/POPS-Regression/blob/main/README.md"

[tool.setuptools]
packages = ["POPSRegression"]

